--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
@@ -1,9 +1,8 @@
 :host {
     display: block;
     width: 100%;
+    margin:20px;
 }
-
-
 /* Content layout styling */
 .content {
     display: flex;
@@ -26,7 +25,33 @@
     padding: 1rem;
     box-sizing: border-box;
 }
-
+.main-buttons {
+    display: flex;
+    gap:20px;
+    margin-bottom: 20px;
+  }
+  
+  .quartile-buttons, .year-buttons {
+    display: flex;
+    gap: 10px;
+  }
+  
+  .quartile-button, .year-button {
+    padding: 6px;
+    border: 1px solid #673be5;
+    border-radius: 20px;
+    cursor: pointer;
+    color: #673be5;
+  }
+  
+  .quartile-button:hover, .year-button:hover {
+    background-color: #673be5;
+    color:white
+  }
+  
+  .quartile-content {
+    margin-bottom: 20px;
+  }
 
 
 /* Responsive adjustments */
