--- a/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-quartile-section/decarb-quartile-section.component.html
@@ -1,38 +1,40 @@
-<div class="main-buttons">
-  <div class="quartile-buttons">
-    <div class="quartile-button">First Quartile</div>
-    <div class="quartile-button">Second Quartile</div>
-    <div class="quartile-button">Third Quartile</div>
-    <div class="quartile-button">Fourth Quartile</div>
-  </div>
-  <div class="year-buttons">
-    <div class="year-button">2025</div>
-    <div class="year-button">2026</div>
-    <div class="year-button">2027</div>
-    <div class="year-button">2028</div>
-  </div>
-</div>
-
 <div class="quartile-content" *ngFor="let quartile of quartileData; let qIndex = index">
   <h2>{{ quartile.title }}</h2>
   <p>{{ quartile.scopeDescription }}</p>
 
-  <!-- Loop through each quartile's dropdowns -->
-  <div *ngFor="let dropdown of quartile.dropdowns; let dIndex = index">
+  <div *ngFor="let dropdown of quartile.dropdowns; let dIndex = index" class="dropdown-container">
     <div (click)="toggleDropdown('dropdown' + qIndex + '_' + dIndex)" class="dropdown-header">
       <span>
-        <input type="checkbox" [checked]="dropdown.isCompleted" (click)="toggleCompletion(qIndex, dIndex); $event.stopPropagation();" />
-        <!-- Checkmark if completed -->
+        <input 
+          type="checkbox" 
+          [checked]="dropdown.isCompleted" 
+          (click)="toggleCompletion(qIndex, dIndex); $event.stopPropagation();" 
+        />
         <span [class.completed]="dropdown.isCompleted" class="checkmark">&#10003;</span> 
         {{ dropdown.title }}
       </span>
-      <span [class.open]="isDropdownOpen['dropdown' + qIndex + '_' + dIndex]" class="dropdown-arrow">&#9662;</span>
+      <span 
+        [class.open]="isDropdownOpen['dropdown' + qIndex + '_' + dIndex]" 
+        class="dropdown-arrow">&#9662;
+      </span>
     </div>
-    <div [class.show]="isDropdownOpen['dropdown' + qIndex + '_' + dIndex]" class="dropdown-content">
-      <p>{{ dropdown.content }}</p>
+
+    <!-- Updated: Ensuring description and provider information displays fully -->
+    <div *ngIf="isDropdownOpen['dropdown' + qIndex + '_' + dIndex]" class="dropdown-content show">
+      <p>{{ dropdown.description }}</p>
+
+      <div *ngIf="dropdown.providerInfo">
+        <h4>Provider Information:</h4>
+        <ul>
+          <li *ngFor="let provider of dropdown.providerInfo">
+            <strong>{{ provider.plan_name }}</strong> - {{ provider.company }}
+            <p>{{ provider['description of the company'] }}</p>
+            <p>Renewable Percentage: {{ provider['renewable percent provided'] }}%</p>
+            <p>Phone: {{ provider.phone_number }}</p>
+            <a [href]="provider.website_link" target="_blank">Visit Website</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </div>
-
-
-
