--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.html
@@ -1,1 +1,22 @@
-<p>scope2-steps works!</p>
+<div class="step-details">
+  <input type="checkbox" [checked]="stepData.isCompleted" (change)="toggleCompletion()" />
+  <span>{{ stepData.title }}</span>
+  <p><strong>Provider Information:</strong></p>
+  <ul>
+    <!-- Loop over each provider in providerInfo array -->
+    <li *ngFor="let provider of stepData.providerInfo">
+      <strong>{{ provider.name }}</strong> - {{ provider.details }}
+      <br>
+      Renewable Percentage: {{ provider.renewablePercentage }}%
+      <br>
+      Phone: {{ provider.phone }}
+      <br>
+      <a [href]="provider.website" target="_blank">Visit Website</a>
+    </li>
+  </ul>
+  <p><strong>Cost Savings:</strong> {{ stepData.costSavings }}</p>
+  <p><strong>CO₂ Savings:</strong> {{ stepData.co2Savings }}</p>
+  <p><strong>Transition:</strong> {{ stepData.transition }}</p>
+</div>
+
+  
