Integration of maps and journey

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
@@ -1,5 +1,13 @@
+
 <div class="decarbonize-header">
   <h1>Your decarbonization journey with AI</h1>
+  <div>
+    <div class="top-right-link">
+      <a [routerLink]="['/map']" class="compare-link">
+        <img src="assets/icons/AI.png" alt="AI Icon">
+        See how you compare with other companies
+      </a>
+    </div>
   <p>Choose from a variety of AI-recommended actions to get started on your decarbonization journey. Add preferred actions to track your progress towards your CO2 savings goal in real-time, just like a shopping cart. Calculate your total savings and see how close you are to achieving your target. </p>
   <div class="main-buttons">
     <div class="quartile-buttons">
