--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.css
@@ -13,6 +13,25 @@
     box-sizing: border-box;
     padding-left: 2rem;
 }
+.top-right-link {
+  display: flex;
+  justify-content: flex-end; 
+  margin-bottom: 10px; 
+  margin-right:20px;
+}
+.compare-link {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  font-weight: 700;
+  color: #6739E9;
+  text-decoration: underline;
+}
+
+.compare-link img {
+  margin-right: 5px;
+  vertical-align: middle;
+}
 
 .main-content {
     flex: 1.5;
