--- a/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-journey.component.html
@@ -1,3 +1,6 @@
+<link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+
+<button mat-raised-button color="primary" (click)="goBack()">Back</button>
 <div class="top-right-link">
   <a [routerLink]="['/map']" class="compare-link">
     <img src="assets/icons/AI.png" alt="AI Icon">
@@ -11,20 +14,6 @@
   <div>
     
   <p>Choose from a variety of AI-recommended actions to get started on your decarbonization journey. Add preferred actions to track your progress towards your CO2 savings goal in real-time, just like a shopping cart. Calculate your total savings and see how close you are to achieving your target. </p>
-  <div class="main-buttons">
-    <div class="quartile-buttons">
-      <div class="quartile-button">First Quartile</div>
-      <div class="quartile-button">Second Quartile</div>
-      <div class="quartile-button">Third Quartile</div>
-      <div class="quartile-button">Fourth Quartile</div>
-    </div>
-    <div class="year-buttons">
-      <div class="year-button">2025</div>
-      <div class="year-button">2026</div>
-      <div class="year-button">2027</div>
-      <div class="year-button">2028</div>
-    </div>
-  </div>
 </div>
 
 <div class="content">
