--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
@@ -1,4 +1,6 @@
 <!-- Target Section -->
+<link href="https://fonts.googleapis.com/css2?family=Karla&display=swap" rel="stylesheet">
+<div class="Shopping-cart">
 <div class="target"(mouseenter)="showScopeTargets = true" (mouseleave)="showScopeTargets = false">
   <div class="target-info">
     <p><b>Reduction Target</b></p>
@@ -91,6 +93,6 @@
   <h3>${{ getTotalCostSavings() }}K</h3>
   <h3>{{ getTotalCO2Savings() }} kgCO2e</h3>
 </div>
-
+</div>
 
 
