--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope1-steps/scope1-steps.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope1-steps/scope1-steps.component.html
@@ -1,20 +1,24 @@
-<div class="step-details">
-  <input type="checkbox" [checked]="stepData.isCompleted" (change)="toggleCompletion()" /> 
-  <span>{{ stepData.title }}</span>
-  <p><strong>Provider Information:</strong></p>
-  <ul>
-    <li *ngFor="let provider of stepData.providerInfo">
-      <strong>{{ provider.name }}</strong> - {{ provider.details }}
-      <br>
-      Renewable Percentage: {{ provider.renewablePercentage }}%
-      <br>
-      Phone: {{ provider.phone }}
-      <a [href]="provider.website" target="_blank">Visit Website</a>
-    </li>
-  </ul>
-  <p><strong>Cost Savings:</strong> {{ stepData.costSavings }}</p>
-  <p><strong>CO₂ Savings:</strong> {{ stepData.co2Savings }}</p>
-  <p><strong>Transition:</strong> {{ stepData.transition }}</p>
-</div>
 
+<div class="step-details">
+  <input type="checkbox" [checked]="stepData?.isCompleted" (change)="toggleCompletion()" /> 
+  <span>{{ stepData?.title }}</span>
   
+  <p><strong>Provider Information:</strong></p>
+  <div class="dropdown-content">
+    <ul *ngIf="stepData?.providerInfo?.length">
+      <li *ngFor="let provider of stepData.providerInfo">
+        <strong>{{ provider.name }}</strong> - {{ provider.details }}
+        <br>
+        Renewable Percentage: {{ provider.renewablePercentage }}%
+        <br>
+        Phone: {{ provider.phone }}
+        <br>
+        <a *ngIf="provider.website" [href]="provider.website" target="_blank">Visit Website</a>
+      </li>
+    </ul>
+  </div>
+  
+  <p *ngIf="stepData?.costSavings"><strong>Cost Savings:</strong> {{ stepData.costSavings }}</p>
+  <p *ngIf="stepData?.co2Savings"><strong>CO₂ Savings:</strong> {{ stepData.co2Savings }}</p>
+  <p *ngIf="stepData?.transition"><strong>Transition:</strong> {{ stepData.transition }}</p>
+</div>
