Fixed alignments of shopping cart

--- a/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
+++ b/decarbFrontEnd/src/app/decarb-journey/decarb-shopping-cart/decarb-shopping-cart.component.html
@@ -89,9 +89,11 @@
 
 <!-- Savings Summary -->
 <div class="savings-summary">
-  <p>Savings</p>
-  <h3>${{ getTotalCostSavings() }}K</h3>
-  <h3>{{ getTotalCO2Savings() }} kgCO2e</h3>
+  <h3>Savings</h3>
+  <div class="savings-content">
+  <p>${{ getTotalCostSavings() }}K</p>
+  <p>{{ getTotalCO2Savings() }} kgCO2e</p>
+</div>
 </div>
 </div>
 
