--- a/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.css
+++ b/decarbFrontEnd/src/app/decarb-journey/quartile-steps/scope2-steps/scope2-steps.component.css
@@ -9,31 +9,45 @@
   align-items: center;
   justify-content: space-between;
   cursor: pointer;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border-bottom: 1px solid #ddd;
   margin-bottom: 10px;
 }
 
 .checkbox-icon {
-  width: 150px;
-  height: 150px;
+  width: 35px;
+  height: 35px;
   margin-right: 10px;
 }
 
 .title {
-  font-size: 1.2em;
+  font-size: 20px;
   font-weight: bold;
+  padding-left: 16px; /* Add space between the icon and title */
   flex: 1;
 }
 
 .dropdown-arrow svg {
-  width: 16px;
-  height: 16px;
-  color: #5c2bff; /* Adjust color as needed */
+  width: 25px;
+  height: 25px;
 }
 
 .step-content {
   padding-top: 10px;
+}
+
+.svg-container img {
+  width: 40px;
+  height: 40px;
+  margin-right: 8px;
+}
+
+.svg-container {
+  display: flex;
+  align-items: center;
+  font-size: 16px; /* Increase font size for implementation labels */
+  font-weight: 500;
+  margin: 8px 0;
 }
 
 .implementation,
@@ -50,7 +64,7 @@
 }
 
 .provider-item {
-  padding: 8px 0;
+  padding: 12px 0;
   border-bottom: 1px solid #ddd;
 }
 
@@ -67,3 +81,15 @@
   text-decoration: underline;
 }
 
+.provider-info ul {
+  padding-left: 20px; /* Add spacing between provider items */
+}
+
+.provider-info strong {
+  display: block;
+  margin-bottom: 4px; /* Add spacing between provider name and details */
+}
+
+.savings-info p {
+  margin-bottom: 8px; /* Add space between cost savings and CO₂ savings */
+}
